    (Closes: #981005)
  * [rt] Update to 5.10.14-rt28
  * Ignore __udp_gso_segment to avoid ABI changes
  * Ignore xhci_init_driver to avoid ABI changes
  * [rt] Update to 5.10.16-rt30
  * [rt] Refresh "tracing: Merge irqflags + preempt counter." for context
    changes
  * [rt] Update to 5.10.17-rt32
  * [rt] Refresh "um: synchronize kmsg_dumper" for context changes

  [ Vincent Blut ]
  * [x86] Enable PWM_CRC (Closes: #982808)
  * net/can: Enable CAN_J1939 as module

  [ Luca Boccassi ]
  * bpf: enable CONFIG_BPF_LSM on all architectures. Not active by default,
    by explicitly setting CONFIG_LSM to include all other LSMs but not bpf.

 -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 12 Feb 2021 10:23:17 +0100

linux (5.10.13-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.10.13
    - iwlwifi: provide gso_type to GSO packets
    - nbd: freeze the queue while we're adding connections (CVE-2021-3348)
    - tty: avoid using vfs_iocb_iter_write() for redirected console writes
    - ACPI: sysfs: Prefer "compatible" modalias
    - ACPI: thermal: Do not call acpi_thermal_check() directly
    - kernel: kexec: remove the lock operation of system_transition_mutex
    - ALSA: hda/realtek: Enable headset of ASUS B1400CEPE with ALC256
    - ALSA: hda/via: Apply the workaround generically for Clevo machines
    - [arm64,armhf] media: cedrus: Fix H264 decoding
    - media: rc: fix timeout handling after switch to microsecond durations
    - [x86] media: rc: ite-cir: fix min_timeout calculation
    - media: rc: ensure that uevent can be read directly after rc device
      register
    - [armhf] dts: tbs2910: rename MMC node aliases
    - wext: fix NULL-ptr-dereference with cfg80211's lack of commit()
    - [amd64] ASoC: AMD Renoir - refine DMI entries for some Lenovo products
    - drm/nouveau/kms/gk104-gp1xx: Fix > 64x64 cursors