@@ -20,7 +20,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
 
 --- a/include/linux/console.h
 +++ b/include/linux/console.h
-@@ -154,6 +154,8 @@ struct console {
+@@ -155,6 +155,8 @@
  #ifdef CONFIG_PRINTK
  	char	sync_buf[CONSOLE_LOG_MAX];
  #endif
@@ -39,7 +39,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  #include <linux/clocksource.h>
  #include <linux/sched/clock.h>
  #include <linux/sched/debug.h>
-@@ -268,11 +269,6 @@ static void __up_console_sem(unsigned lo
+@@ -268,11 +269,6 @@
  static int console_locked, console_suspended;
  
  /*
@@ -51,7 +51,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
   *	Array of consoles built from command line options (console=)
   */
  
-@@ -356,10 +352,10 @@ enum log_flags {
+@@ -356,10 +352,10 @@
  	LOG_CONT	= 8,	/* text is a fragment of a continuation line */
  };
  
@@ -63,7 +63,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  /* Set to enable sync mode. Once set, it is never cleared. */
  static bool sync_mode;
  
-@@ -370,13 +366,6 @@ static u64 syslog_seq;
+@@ -370,13 +366,6 @@
  static size_t syslog_partial;
  static bool syslog_time;
  
@@ -77,7 +77,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  struct latched_seq {
  	seqcount_latch_t	latch;
  	u64			val[2];
-@@ -1754,6 +1743,8 @@ static bool console_can_sync(struct cons
+@@ -1755,6 +1744,8 @@
  		return false;
  	if (con->write_atomic && kernel_sync_mode())
  		return true;
@@ -86,7 +86,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  	return false;
  }
  
-@@ -1763,6 +1754,8 @@ static bool call_sync_console_driver(str
+@@ -1764,6 +1755,8 @@
  		return false;
  	if (con->write_atomic && kernel_sync_mode())
  		con->write_atomic(con, text, text_len);
@@ -95,7 +95,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  	else
  		return false;
  
-@@ -1818,202 +1811,16 @@ static void print_sync_until(struct cons
+@@ -1819,202 +1812,16 @@
  
  	console_atomic_lock(&flags);
  	for (;;) {
@@ -300,7 +300,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  #ifdef CONFIG_PRINTK_NMI
  #define NUM_RECURSION_CTX 2
  #else
-@@ -2284,39 +2091,16 @@ asmlinkage int vprintk_emit(int facility
+@@ -2285,39 +2092,16 @@
  			    const char *fmt, va_list args)
  {
  	int printed_len;
@@ -341,7 +341,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  	wake_up_klogd();
  	return printed_len;
  }
-@@ -2368,38 +2152,158 @@ asmlinkage __visible int printk(const ch
+@@ -2369,38 +2153,158 @@
  }
  EXPORT_SYMBOL(printk);
  
@@ -523,7 +523,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  
  #endif /* CONFIG_PRINTK */
  
-@@ -2644,36 +2548,6 @@ int is_console_locked(void)
+@@ -2638,36 +2542,6 @@
  }
  EXPORT_SYMBOL(is_console_locked);
  
@@ -560,7 +560,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  /**
   * console_unlock - unlock the console system
   *
-@@ -2690,131 +2564,14 @@ static inline int can_use_console(void)
+@@ -2684,131 +2558,14 @@
   */
  void console_unlock(void)
  {
@@ -692,7 +692,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  }
  EXPORT_SYMBOL(console_unlock);
  
-@@ -2864,18 +2621,20 @@ void console_unblank(void)
+@@ -2858,18 +2615,20 @@
   */
  void console_flush_on_panic(enum con_flush_mode mode)
  {
@@ -723,7 +723,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  	console_unlock();
  }
  
-@@ -3010,7 +2769,6 @@ static int try_enable_new_console(struct
+@@ -3004,7 +2763,6 @@
   */
  void register_console(struct console *newcon)
  {
@@ -731,7 +731,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  	struct console *bcon = NULL;
  	int err;
  
-@@ -3034,6 +2792,8 @@ void register_console(struct console *ne
+@@ -3028,6 +2786,8 @@
  		}
  	}
  
@@ -740,7 +740,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  	if (console_drivers && console_drivers->flags & CON_BOOT)
  		bcon = console_drivers;
  
-@@ -3098,27 +2858,12 @@ void register_console(struct console *ne
+@@ -3092,27 +2852,12 @@
  	if (newcon->flags & CON_EXTENDED)
  		nr_ext_console_drivers++;
  
@@ -773,7 +773,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  	console_unlock();
  	console_sysfs_notify();
  
-@@ -3192,6 +2937,9 @@ int unregister_console(struct console *c
+@@ -3186,6 +2931,9 @@
  	console_unlock();
  	console_sysfs_notify();
  
@@ -783,7 +783,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  	if (console->exit)
  		res = console->exit(console);
  
-@@ -3274,6 +3022,15 @@ static int __init printk_late_init(void)
+@@ -3268,6 +3016,15 @@
  			unregister_console(con);
  		}
  	}
@@ -799,7 +799,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  	ret = cpuhp_setup_state_nocalls(CPUHP_PRINTK_DEAD, "printk:dead", NULL,
  					console_cpu_notify);
  	WARN_ON(ret < 0);
-@@ -3289,7 +3046,6 @@ late_initcall(printk_late_init);
+@@ -3283,7 +3040,6 @@
   * Delayed printk version, for scheduler-internal messages:
   */
  #define PRINTK_PENDING_WAKEUP	0x01
@@ -807,7 +807,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  
  static DEFINE_PER_CPU(int, printk_pending);
  
-@@ -3297,14 +3053,8 @@ static void wake_up_klogd_work_func(stru
+@@ -3291,14 +3047,8 @@
  {
  	int pending = __this_cpu_xchg(printk_pending, 0);
  
@@ -822,8 +822,8 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
 +		wake_up_interruptible_all(&log_wait);
  }
  
- static DEFINE_PER_CPU(struct irq_work, wake_up_klogd_work) =
-@@ -3325,13 +3075,6 @@ void wake_up_klogd(void)
+ static DEFINE_PER_CPU(struct irq_work, wake_up_klogd_work) = {
+@@ -3321,13 +3071,6 @@
  
  void defer_console_output(void)
  {
