@@ -324,6 +324,8 @@ linux (5.10.18-1) UNRELEASED; urgency=medium
     changes
   * [rt] Update to 5.10.17-rt32
   * [rt] Refresh "um: synchronize kmsg_dumper" for context changes
+  * [rt] Refresh "printk: move console printing to kthreads" for context
+    changes
 
   [ Vincent Blut ]
   * [x86] Enable PWM_CRC (Closes: #982808)
